--- a/public/css/viewer.css
+++ b/public/css/viewer.css
@@ -1,10 +1,10 @@
 
-#photrViewer #imageContainer {
+.imageContainer {
     width : 300px;
     height : 300px;
 }
 
-#photrViewer #imageContainer img {
+.imageContainer img {
     width : 100%;
     height : 100%;
 }
