--- a/public/css/viewer.css
+++ b/public/css/viewer.css
@@ -1,10 +1,37 @@
 
-.imageContainer {
-    width : 300px;
-    height : 300px;
+.photrViewer .imageContainer {
+    /* TODO These floats may cause problems later when I have more than one viewer. I probably want to remove them later */
+    float: left;
+    width: 300px;
+    height: 300px;
+    margin: 20px;
+    text-align: center;
 }
 
-.imageContainer img {
-    width : 100%;
-    height : 100%;
+.photrViewer .imageContainer img {
+    width: 100%;
+    height: 100%;
+}
+
+.photrViewer button {
+    float: left;
+    height: 40%;
+    padding: 18px;
+    margin: 6% 10px;
+    background-color: rgb(24, 144, 144);
+    border-radius: 10px;
+    color: white;
+    border: 1px solid rgb(61, 90, 90);
+    cursor: pointer;
+}
+
+.photrViewer button:hover {
+    background-color: rgb(42, 178, 178);
+}
+
+.photrViewer button[disabled=true] {
+    background-color: rgb(218, 218, 218);
+    border-color: rgb(205, 205, 205);
+    color: rgb(153, 153, 153);
+    cursor: default;
 }
