--- a/public/css/viewer.css
+++ b/public/css/viewer.css
@@ -1,4 +1,37 @@
 
+.glass {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    background-color: rgba(0, 0, 0, .3);
+}
+
+.glass .light-box {
+    position: fixed;
+    z-index: 1050;
+    top: 50%;
+    left: 50%;
+    width: 600px;
+    height: 400px;
+    margin-left: -300px;
+    margin-top: -200px;
+    background-color: #FFF;
+}
+
+.glass .light-box .close{
+    position: absolute;
+    z-index: 1100;
+    width: 20px;
+    height: 20px;
+    top: 5px;
+    right: 5px;
+    background-color: #FFF;
+    cursor: pointer;
+}
+
 .photrViewer .imageContainer {
     /* TODO These floats may cause problems later when I have more than one viewer. I probably want to remove them later */
     float: left;
