--- a/public/css/viewer.css
+++ b/public/css/viewer.css
@@ -11,17 +11,15 @@
 
 .glass .light-box {
     position: fixed;
+    display: inline-block;
     z-index: 1050;
-    top: 50%;
-    left: 50%;
-    width: 600px;
-    height: 400px;
-    margin-left: -300px;
-    margin-top: -200px;
+    top: 25%;
+    left: 33%;
+    padding: 10px;
     background-color: #FFF;
 }
 
-.glass .light-box .close{
+.glass .light-box .close {
     position: absolute;
     z-index: 1100;
     width: 20px;
@@ -33,29 +31,28 @@
 }
 
 .photrViewer .imageContainer {
-    /* TODO These floats may cause problems later when I have more than one viewer. I probably want to remove them later */
-    float: left;
-    width: 300px;
-    height: 300px;
-    margin: 20px;
+    width: 500px;
+    height: 350px;
     text-align: center;
 }
 
-.photrViewer .imageContainer img {
-    width: 100%;
-    height: 100%;
-}
-
 .photrViewer button {
-    float: left;
-    height: 40%;
-    padding: 18px;
-    margin: 6% 10px;
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 35px;
     background-color: rgb(24, 144, 144);
-    border-radius: 10px;
     color: white;
     border: 1px solid rgb(61, 90, 90);
     cursor: pointer;
+}
+
+.photrViewer button.left {
+    left: -35px;
+}
+
+.photrViewer button.right {
+    right: -35px;
 }
 
 .photrViewer button:hover {
