--- a/public/css/viewer.css
+++ b/public/css/viewer.css
@@ -1,4 +1,9 @@
 
+body {
+    font-family: "source-sans-pro",sans-serif;
+    padding: 100px 30%;
+}
+
 .glass {
     position: absolute;
     top: 0px;
