--- a/public/css/viewer.css
+++ b/public/css/viewer.css
@@ -11,34 +11,38 @@ body {
     width: 100%;
     height: 100%;
     z-index: 1000;
-    background-color: rgba(0, 0, 0, .3);
+    background-color: rgba(0, 0, 0, .2);
 }
 
 .glass .light-box {
     position: fixed;
     display: inline-block;
     z-index: 1050;
-    top: 25%;
-    left: 33%;
+    top: 50%;
+    left: 50%;
     padding: 10px;
-    background-color: #FFF;
 }
 
 .glass .light-box .close {
     position: absolute;
     z-index: 1100;
-    width: 20px;
-    height: 20px;
-    top: 5px;
-    right: 5px;
-    background-color: #FFF;
+    padding: 5px;
+    top: -1.2em;
+    right: -1.1em;
     cursor: pointer;
+    font-weight: bolder;
+    transform: scaleY(.8);
+    font-size: 1.3em;
+    color: #FFF7F7;
+    text-shadow: -1px 0 rgb(165, 28, 28), 0 1px rgb(165, 28, 28), 1px 0 rgb(165, 28, 28), 0 -1px rgb(165, 28, 28);
 }
 
 .photrViewer .imageContainer {
     width: 500px;
     height: 350px;
     text-align: center;
+    background-color: #FFF;
+    padding: 20px;
 }
 
 .photrViewer button {
@@ -46,10 +50,14 @@ body {
     top: 0;
     height: 100%;
     width: 35px;
-    background-color: rgb(24, 144, 144);
-    color: white;
-    border: 1px solid rgb(61, 90, 90);
+    background-color: #FFF7F7;
+    color: rgb(165, 28, 28);
+    border: 1px solid rgb(165, 28, 28);
     cursor: pointer;
+}
+
+.photrViewer img {
+    margin-bottom: 10px;
 }
 
 .photrViewer button.left {
@@ -61,7 +69,8 @@ body {
 }
 
 .photrViewer button:hover {
-    background-color: rgb(42, 178, 178);
+    color: #FFF7F7;
+    background-color: rgb(165, 28, 28);
 }
 
 .photrViewer button[disabled=true] {
@@ -69,4 +78,58 @@ body {
     border-color: rgb(205, 205, 205);
     color: rgb(153, 153, 153);
     cursor: default;
+}
+
+
+/* Obtained from https://github.com/tobiasahlin/SpinKit */
+.spinner {
+    width: 110px;
+    height: 70px;
+    text-align: center;
+}
+
+.spinner > div {
+    background-color: #FFF7F7;
+    height: 100%;
+    width: 13px;
+    display: inline-block;
+    margin: 0 3px 0 0;
+    border: 1px solid rgb(165, 28, 28);
+    -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
+    animation: stretchdelay 1.2s infinite ease-in-out;
+}
+
+.spinner .rect2 {
+    -webkit-animation-delay: -1.1s;
+    animation-delay: -1.1s;
+}
+
+.spinner .rect3 {
+    -webkit-animation-delay: -1.0s;
+    animation-delay: -1.0s;
+}
+
+.spinner .rect4 {
+    -webkit-animation-delay: -0.9s;
+    animation-delay: -0.9s;
+}
+
+.spinner .rect5 {
+    -webkit-animation-delay: -0.8s;
+    animation-delay: -0.8s;
+}
+
+@-webkit-keyframes stretchdelay {
+    0%, 40%, 100% { -webkit-transform: scaleY(0.4) }
+    20% { -webkit-transform: scaleY(1.0) }
+}
+
+@keyframes stretchdelay {
+    0%, 40%, 100% {
+        transform: scaleY(0.4);
+        -webkit-transform: scaleY(0.4);
+    }  20% {
+        transform: scaleY(1.0);
+        -webkit-transform: scaleY(1.0);
+    }
 }
