--- a/public/css/viewer.css
+++ b/public/css/viewer.css
@@ -1,7 +1,55 @@
 
+/* There are a lot of dub variables in here. I would normally use less. */
+
 body {
-    font-family: "source-sans-pro",sans-serif;
+    font: 12px "Helvetica Neue", Helvetica, Arial, sans-serif;
     padding: 100px 30%;
+    color: #666;
+}
+
+h1 {
+    font-size: 2em;
+    text-shadow: 1px 1px 1px #FFF;
+}
+
+input {
+    border: 1px solid #CCC;
+    color: #888;
+    height: 40px;
+    margin-right: 6px;
+    padding: 5px 0px 5px 5px;
+    width: 70%;
+
+    border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+}
+
+button {
+    border: 1px solid #CCC;
+    height: 40px;
+    padding: 10px;
+    color: #666;
+    background-color: #FFF;
+
+    border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+}
+
+button:hover {
+    background-color: #F5F5F5;
+    border-color: #BBB;
+}
+
+.or {
+    padding: 20px;
+}
+
+.error {
+    font-size: 4em;
+    color: rgb(165, 28, 28);
+    text-shadow: -1px 0 #FFF7F7, 0 1px #FFF7F7, 1px 0 #FFF7F7, 0 -1px #FFF7F7;
 }
 
 .glass {
@@ -27,12 +75,12 @@ body {
     position: absolute;
     z-index: 1100;
     padding: 5px;
-    top: -1.2em;
-    right: -1.1em;
+    font-size: 1.8em;
+    top: -1.7em;
+    right: -1.6em;
     cursor: pointer;
     font-weight: bolder;
     transform: scaleY(.8);
-    font-size: 1.3em;
     color: #FFF7F7;
     text-shadow: -1px 0 rgb(165, 28, 28), 0 1px rgb(165, 28, 28), 1px 0 rgb(165, 28, 28), 0 -1px rgb(165, 28, 28);
 }
@@ -79,7 +127,6 @@ body {
     color: rgb(153, 153, 153);
     cursor: default;
 }
-
 
 /* Obtained from https://github.com/tobiasahlin/SpinKit */
 .spinner {
